# lecture-ai-engineering

.github/workflows/: test.yml
day1/: day1_practice.ipynb
day1/02_streamlit_app/: app.py  llm.py  ui.py
day5/演習1/: main.py
day5/演習1/models/: titanic_model.pkl
day5/演習2/: black_check.py  main.py
day5/演習3/data/: titanic_model.pkl
day5/演習3/models/: model_metrics.json  titanic_model.pkl
day5/演習3/tests/: test_model.py
final_project/: README.md  pyproject.toml  requirements.txt
final_project/frontend/: ui_app.py
final_project/src/analysis/: metrics.py  sentiment.py
final_project/src/ingest/: mastodon_client.py  twitter_client.py
final_project/src/preprocessing/: cleaner.py
final_project/src/report/: reporter.py
final_project/tests/: test_cleaner.py  test_metrics.py
